# Liquid

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_INFO.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  SECURITY.md  TASKS.md  analysis_options.yaml  deny.toml  developer_info.md  docker-compose.yml  justfile  lefthook.yml  renovate.json  rustfmt.toml
.ai/artifacts/: .gitignore  README.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  github-pr.md  test-triager.md  ui-validator.md
.claude/commands/: implement.md
.claude/hooks/: filter-test-output.sh  pre-commit-review.sh  save-artifacts.sh  session-start.sh
.claude/rules/: api-grep-discipline.md  flutter.md  log-volume.md  rust.md  subagent-routing.md  testing.md
.claude/scripts/: gh-job-log  py
.claude/skills/deliver/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/implement-tdd/: SKILL.md
.claude/skills/review-diff/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent-task.md  bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ai-check.yml  audit.yml  ci.yml  sync-docs.yml
.lefthook/commit-msg/: check-changelog.sh  check-conventional.sh
app/: pubspec.yaml
app/lib/: main.dart
app/lib/src/: explorer_panel.dart  page_area.dart  page_grid.dart  root_shell.dart  state.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
core/: Cargo.toml  rust-toolchain.toml
core/liquid-auth/: Cargo.toml
core/liquid-auth/src/: lib.rs  local.rs  provider.rs  storage.rs  token.rs
core/liquid-auth/tests/: local_provider.rs  local_provider_corners.rs
core/liquid-bindings/: Cargo.toml
core/liquid-bindings/src/: broker.rs  lib.rs
core/liquid-cache/: Cargo.toml
core/liquid-cache/src/: in_process.rs  lib.rs  read_cache.rs
core/liquid-cache/tests/: in_process_cache.rs
core/liquid-cli/: Cargo.toml
core/liquid-cli/src/: args.rs  main.rs  output.rs  runtime.rs  services.rs  token.rs
core/liquid-cli/src/cmd/: audit.rs  auth.rs  impersonate.rs  mod.rs  page.rs  parse.rs  workspace.rs
core/liquid-core/: Cargo.toml
core/liquid-core/src/: content_hash.rs  error.rs  ids.rs  lib.rs  permission.rs  slot.rs  store_path.rs  tenant.rs
core/liquid-core/tests/: integration.rs  slot_corners.rs
core/liquid-permissions/: Cargo.toml
core/liquid-permissions/examples/: m3_walkthrough.rs
core/liquid-permissions/src/: filesystem.rs  index.rs  lib.rs  macros.rs  role.rs
core/liquid-permissions/tests/: filesystem_corners.rs  filesystem_index.rs  m3_end_to_end.rs  permission_index.rs
core/liquid-sdk-bridge/: Cargo.toml
core/liquid-sdk-bridge/examples/: m5_walkthrough.rs
core/liquid-sdk-bridge/src/: api.rs  lib.rs  registry.rs  services.rs  types.rs
core/liquid-sdk-bridge/tests/: m5_end_to_end.rs
core/liquid-vcs/: Cargo.toml
core/liquid-vcs/examples/: m2_walkthrough.rs  m4_walkthrough.rs
core/liquid-vcs/src/: cached.rs  content_store.rs  filesystem.rs  in_memory.rs  lib.rs  operation.rs
core/liquid-vcs/tests/: cached_store.rs  filesystem.rs  integration.rs
docs/: manual-validation-m1-m3.md  manual-validation-m4-m5.md  manual-validation-m6-m9.md  manual-validation-m6.5.md
docs/adr/: 001-jujutsu-pinning.md  002-m3-trait-scoping.md  003-oss-policy.md  004-bridge-token-first-arg.md  TEMPLATE.md
docs/ops/: branch-protection.md
docs/security/: threat-model.md
scripts/: ai-check.sh  bump-version.sh  check-branch-name.sh  setup-tooling.sh  sync-docs-check.sh
sdk/liquid_sdk/: pubspec.yaml
sdk/liquid_sdk/lib/: liquid_sdk.dart
sdk/liquid_sdk/lib/src/: component.dart  manifest.dart  runtime_apis.dart  slot.dart
sdk/liquid_sdk/test/: liquid_sdk_test.dart
tests/cli/: 00_mvp_slice.bats  01_branch_name_gate.bats  02_bump_version.bats  03_pre_commit_review_hook.bats  04_changelog_gate.bats  05_gh_job_log.bats  06_coverage_recipes.bats  07_setup_tooling.bats  08_clean_recipes.bats  09_session_start_hook.bats  10_cli_subcommands.bats  11_m7_full_cli.bats  README.md
