[workspace]
resolver = "2"
members = [
    "liquid-core",
    "liquid-vcs",
    "liquid-auth",
    "liquid-permissions",
    "liquid-cache",
    "liquid-bindings",
    "liquid-sdk-bridge",
    "liquid-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/open-equilibrium/liquid"
# Minimum Supported Rust Version. Kept in lock-step with:
#   - core/rust-toolchain.toml  (toolchain pin used by `rustup` locally)
#   - .github/workflows/ci.yml  (dtolnay/rust-toolchain @master `toolchain:`)
# Bump all three together; never let CI drift to "stable". See CLAUDE.md
# "Cloud notes" for the policy.
rust-version = "1.94"

[workspace.dependencies]
liquid-core = { path = "liquid-core" }
liquid-vcs = { path = "liquid-vcs" }
liquid-auth = { path = "liquid-auth" }
liquid-permissions = { path = "liquid-permissions" }
liquid-cache = { path = "liquid-cache" }
liquid-bindings = { path = "liquid-bindings" }
liquid-sdk-bridge = { path = "liquid-sdk-bridge" }

async-trait = "0.1"
bytes = { version = "1.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.38", default-features = false }
uuid = { version = "1.10", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
