[package]
name = "liquid-auth"
description = "Liquid: identity, OIDC, and session management. Implements IdentityProvider."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
async-trait.workspace = true
serde.workspace = true
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2.workspace = true
toml = "0.8"
hex = "0.4"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
