[package]
name = "liquid-bindings"
description = "Liquid: data binding pub/sub broker. Implements SlotBroker."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
