[package]
name = "liquid-bindings"
description = "Liquid: data binding pub/sub broker. Implements SlotBroker."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
