[package]
name = "liquid-cache"
description = "Liquid: content-addressable read cache. Implements ReadCache."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap = "6.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
