[package]
name = "liquid-permissions"
description = "Liquid: RBAC model and materialized permission index. Implements PermissionIndex."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
async-trait.workspace = true
serde.workspace = true
toml = "0.8"
uuid.workspace = true

[dev-dependencies]
liquid-auth.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
