[package]
name = "liquid-vcs"
description = "Liquid: Jujutsu-backed content store. Implements ContentStore."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
