[package]
name = "liquid-vcs"
description = "Liquid: ContentStore trait + InMemoryContentStore. Jujutsu-backed implementation lands in TASK-003."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
liquid-core.workspace = true
async-trait.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
